[workspace.package]
license = "MIT-0"
authors = ["Boris Stoyanov"]
homepage = "https://github.com/borisstoyanov/Interplanetary-Asynchronous-Ledger-Protocol"
repository = "https://github.com/borisstoyanov/Interplanetary-Asynchronous-Ledger-Protocol"
edition = "2021"

[workspace]
members = [
    "chain/node",
    "chain/pallets/domain",
    "chain/pallets/epochs",
    "chain/pallets/transfers",
    "chain/runtime",
    "crates/common-config",
    "crates/common-types",
    "services/exporter",
    "services/importer",
    "services/relay",
]
resolver = "2"


[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }
# `substrate_runtime` is a common `cfg` condition name used in the repo.
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(build_opt_level, values("3"))',
	'cfg(build_profile, values("debug", "release"))',
	'cfg(enable_alloc_error_handler)',
	'cfg(fuzzing)',
	'cfg(ignore_flaky_test)',
	'cfg(substrate_runtime)',
] }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
complexity = { level = "warn", priority = 1 }
correctness = { level = "warn", priority = 1 }
needless_lifetimes = { level = "allow", priority = 2 }
too_many_arguments = { level = "allow", priority = 2 }
type_complexity = { level = "allow", priority = 2 }

[workspace.dependencies]
ialp-common-config = { path = "./crates/common-config" }
ialp-common-types = { path = "./crates/common-types", default-features = false }
ialp-runtime = { path = "./chain/runtime", default-features = false }
pallet-ialp-domain = { path = "./chain/pallets/domain", default-features = false }
pallet-ialp-epochs = { path = "./chain/pallets/epochs", default-features = false }
pallet-ialp-transfers = { path = "./chain/pallets/transfers", default-features = false }

anyhow = "1.0.95"
axum = "0.8.1"
blake2 = "0.10.6"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5.13", features = ["derive"] }
codec = { version = "3.7.4", default-features = false, features = ["derive", "max-encoded-len"], package = "parity-scale-codec" }
futures = { version = "0.3.31" }
hex = "0.4.3"
jsonrpsee = { version = "0.24.3", features = ["macros", "server", "ws-client"] }
multiaddr = "0.18.2"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
serde = { version = "1.0.217", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.132", default-features = false, features = ["alloc"] }
tempfile = "3.16.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = "0.8.19"
twox-hash = "1.6.3"

frame-executive = { version = "=40.0.0", default-features = false }
frame-support = { version = "=40.1.0", default-features = false }
frame-system = { version = "=40.1.0", default-features = false }
frame-system-rpc-runtime-api = { version = "=36.0.0", default-features = false }
pallet-aura = { version = "=39.0.0", default-features = false }
pallet-balances = { version = "=41.1.0", default-features = false }
pallet-grandpa = { version = "=40.0.0", default-features = false }
pallet-sudo = { version = "=40.0.0", default-features = false }
pallet-timestamp = { version = "=39.0.0", default-features = false }
pallet-transaction-payment = { version = "=40.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "=43.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "=40.0.0", default-features = false }
sc-basic-authorship = { version = "=0.49.0", default-features = false }
sc-cli = { version = "=0.51.0", default-features = false }
sc-client-api = { version = "=39.0.0", default-features = false }
sc-consensus = { version = "=0.48.0", default-features = false }
sc-consensus-aura = { version = "=0.49.0", default-features = false }
sc-consensus-grandpa = { version = "=0.34.0", default-features = false }
sc-executor = { version = "=0.42.0", default-features = false }
sc-network = { version = "=0.49.1", default-features = false }
sc-network-types = { version = "=0.15.3", default-features = false }
sc-offchain = { version = "=44.0.0", default-features = false }
sc-service = { version = "=0.50.0", default-features = false }
sc-telemetry = { version = "=28.1.0", default-features = false }
sc-transaction-pool = { version = "=39.0.0", default-features = false }
sc-transaction-pool-api = { version = "=39.0.0", default-features = false }
sp-api = { version = "=36.0.1", default-features = false }
sp-block-builder = { version = "=36.0.0", default-features = false }
sp-blockchain = { version = "=39.0.0", default-features = false }
sp-consensus-aura = { version = "=0.42.0", default-features = false }
sp-consensus-grandpa = { version = "=23.1.0", default-features = false }
sp-core = { version = "=36.1.0", default-features = false }
sp-genesis-builder = { version = "=0.17.0", default-features = false }
sp-inherents = { version = "=36.0.0", default-features = false }
sp-io = { version = "=40.0.1", default-features = false }
sp-keyring = { version = "=41.0.0" }
sp-offchain = { version = "=36.0.0", default-features = false }
sp-runtime = { version = "=41.1.0", default-features = false }
sp-session = { version = "=38.1.0", default-features = false }
sp-state-machine = { version = "=0.45.0", default-features = false }
sp-std = { version = "=14.0.0", default-features = false }
sp-storage = { version = "=22.0.0", default-features = false }
sp-timestamp = { version = "=36.0.0", default-features = false }
sp-transaction-pool = { version = "=36.0.0", default-features = false }
sp-trie = { version = "=39.1.1", default-features = false }
sp-version = { version = "=39.0.0", default-features = false }
substrate-build-script-utils = { version = "=11.0.0", default-features = false }
substrate-frame-rpc-system = { version = "=43.0.0", default-features = false }
substrate-wasm-builder = { version = "=26.0.1", default-features = false }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
