[package]
name = "ialp-node"
description = "IALP local-domain node with real Aura/Grandpa consensus."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { workspace = true }
codec = { workspace = true }
frame-support = { workspace = true }
futures = { workspace = true, features = ["thread-pool"] }
ialp-common-config.workspace = true
ialp-common-types = { workspace = true, features = ["serde"] }
ialp-runtime.workspace = true
jsonrpsee = { workspace = true }
pallet-aura.workspace = true
pallet-grandpa.workspace = true
pallet-ialp-domain.workspace = true
pallet-ialp-epochs.workspace = true
pallet-transaction-payment-rpc.workspace = true
sc-basic-authorship.workspace = true
sc-cli.workspace = true
sc-client-api.workspace = true
sc-consensus.workspace = true
sc-consensus-aura.workspace = true
sc-consensus-grandpa.workspace = true
sc-executor.workspace = true
sc-network.workspace = true
sc-network-types.workspace = true
sc-offchain.workspace = true
sc-service.workspace = true
sc-telemetry.workspace = true
sc-transaction-pool.workspace = true
sc-transaction-pool-api.workspace = true
serde_json = { workspace = true, features = ["std"] }
sp-api.workspace = true
sp-block-builder.workspace = true
sp-blockchain.workspace = true
sp-consensus-aura.workspace = true
sp-consensus-grandpa.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-state-machine.workspace = true
sp-storage.workspace = true
sp-timestamp.workspace = true
sp-transaction-pool.workspace = true
sp-trie.workspace = true
substrate-frame-rpc-system.workspace = true

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = ["std"]
std = ["ialp-runtime/std"]
