[package]
name = "ialp-common-config"
description = "Typed configuration loading and validation for IALP nodes."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
ialp-common-types = { workspace = true, features = ["serde", "std"] }
multiaddr = { workspace = true }
serde = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
toml = { workspace = true }
