[package]
name = "ialp-common-types"
description = "Shared protocol primitives for the Interplanetary Asynchronous Ledger Protocol."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
sp-io = { workspace = true }

[features]
default = ["std", "serde"]
std = ["codec/std", "scale-info/std", "serde?/std", "sp-io/std"]
serde = ["dep:serde"]
