[package]
name = "ialp-summary-importer"
description = "Phase 2B importer for verifying export-proof-bearing IALP summary packages and recording remote_observed imports."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
codec.workspace = true
frame-system = { workspace = true, features = ["std"] }
futures.workspace = true
hex.workspace = true
ialp-common-config.workspace = true
ialp-common-types = { workspace = true, features = ["serde"] }
ialp-runtime = { workspace = true, features = ["std"] }
jsonrpsee.workspace = true
pallet-ialp-governance = { workspace = true, features = ["std"] }
pallet-ialp-transfers = { workspace = true, features = ["std"] }
pallet-transaction-payment = { workspace = true, features = ["std"] }
sc-consensus-grandpa.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["std"] }
sp-consensus-grandpa = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-state-machine = { workspace = true, features = ["std"] }
sp-storage = { workspace = true, features = ["std"] }
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
