[package]
name = "ialp-summary-relay"
description = "Phase 3A relay for durable, blackout-aware delivery of certified IALP summary packages."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
codec.workspace = true
futures.workspace = true
hex.workspace = true
ialp-common-config.workspace = true
ialp-common-types = { workspace = true, features = ["serde"] }
reqwest.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["std"] }
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
