[package]
name = "pallet-ialp-transfers"
description = "Cross-domain transfer intent and observed-import pallet for the Interplanetary Asynchronous Ledger Protocol."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
ialp-common-types = { workspace = true }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
pallet-ialp-domain = { workspace = true }
pallet-ialp-epochs = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "ialp-common-types/std",
    "pallet-balances/std",
    "pallet-ialp-domain/std",
    "pallet-ialp-epochs/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
]
